# merge-attention

./: .clang-format  .gitignore  Cargo.toml  README.md  attentionmodule.c  makefile  minimal.py  pyproject.toml  reference.py  reference_test.py  setup.cfg  setup.py
attention/: __init__.py  attention.py  errors.py  optimized.py  reference.py
attn_rust/: Cargo.toml
attn_rust/src/: lib.rs
merge_attention/: __init__.py  errors.py  merge_attention.pyi  reference.py
src/: lib.rs
tests/: reference_test.py  test_against_reference.py  test_examples.py  test_punctuation.py  test_repeats.py  test_saliency.py  test_split.py  util.py
