[package]
name = "merge-attention"
version = "0.1.0"
authors = ["Sam Stevens <stevens.994@osu.edu>"]
edition = "2018"

[lib]
name="merge_attention"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13.0"
ndarray = "0.14.0"

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]

# Metadata for the final python package
[package.metadata.maturin]
requires-dist = ["numpy>=0.19.0"]
